mejora seccion servicios

--- a/index.html
+++ b/index.html
@@ -67,29 +67,31 @@
           <div class="col-4 services">
             <div class="servicesContent">
               <img src="assets/img/vuelos.jpeg"> 
-            </div>
-            <div>
+              <h4>Vuelos</h4> 
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non enim voluptate assumenda, ex nulla commodi amet voluptas, tempora minima quibusdam maiores nostrum eius veniam asperiores totam voluptatem debitis iste eum.</p>
+              <div class="button">
+                <button>Find out more!</button>
+              </div>
             </div>
-            <button>Find out more!</button>
+           </div>
+          <div class="col-4 services">
+              <div class="servicesContent">
+                <img src="assets/img/alojamiento.jpg"> 
+                <h4>Alojamiento</h4> 
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non enim voluptate assumenda, ex nulla commodi amet voluptas, tempora minima quibusdam maiores nostrum eius veniam asperiores totam voluptatem debitis iste eum.</p>
+                <div class="button">
+                  <button>Find out more!</button>
+                </div>
+              </div>
           </div>
           <div class="col-4 services">
-            <div>
-              <img src="assets/img/alojamiento.jpg"> 
-            </div>
-            <div>
+            <div class="servicesContent">
+              <img src="assets/img/turismo.jpg">   
+              <h4>Tours</h4>          
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non enim voluptate assumenda, ex nulla commodi amet voluptas, tempora minima quibusdam maiores nostrum eius veniam asperiores totam voluptatem debitis iste eum.</p>
-            </div>
-            <button>Find out more!</button>
-          </div>
-          <div class="col-4 services">
-            <div>
-              <img src="assets/img/turismo.jpg"> 
-            </div>
-            <div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non enim voluptate assumenda, ex nulla commodi amet voluptas, tempora minima quibusdam maiores nostrum eius veniam asperiores totam voluptatem debitis iste eum.</p>
-            </div>
-            <button>Find out more!</button>
+              <div class="button">
+                <button>Find out more!</button>
+              </div>
           </div>
         </div>
       </div> 
